--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.4.16",
     "postcss": "8.4.28",
     "react": "18.2.0",
+    "react-calendly": "^4.1.1",
     "react-dom": "18.2.0",
     "react-scroll": "^1.8.9",
     "tailwindcss": "3.3.3",
