--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next build && next export",
+    "sitemap": "next-sitemap",
     "lint": "next lint"
   },
   "dependencies": {
@@ -25,6 +27,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@types/react-scroll": "^1.8.7"
+    "@types/react-scroll": "^1.8.7",
+    "next-sitemap": "^4.2.2"
   }
 }
