--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@builder.io/partytown": "^0.8.1",
     "@types/react-scroll": "^1.8.7",
     "next-sitemap": "^4.2.2"
   }
